# Speckit.Factory

./: .env.example  .gitignore  .spec-lock.json  .speckit-rules  ARCHITECTURE_FIXES_2026.md  CHANGEMENTS_CLES_SYNTHESE.md  ESM_IMPORT_RESOLVER_CHANGES.md  ESM_IMPORT_RESOLVER_IMPLEMENTATION.md  FRAMEWORK_COMPATIBILITY.md  FRAMEWORK_SIMPLIFICATION.md  IMPLEMENTATION_COMPLETE_2026.md  IMPLEMENTATION_REVIEW_2026.md  README.md  VALIDATION_CHECKLIST_2026.md  debug_vibe.txt  format_diff.txt  git_log.txt  package.json  pyproject.toml  spec.py  speckit_cli.py  test_arch_guard_cross_module_strip.py  test_arch_guard_docs_aliases.py  test_arch_guard_verify_route_mapping.py  test_design_formatting.py  test_enhancements.py  test_esm_import_resolver.py  test_graphic_design.py  test_impl_node.py  test_module_token_checklist_validation.py  test_placeholder_replacement.py  test_react_types_dependency_rule.py  test_verify_deterministic_gate.py  verify_custom_patterns.py  verify_fixes_v2.py  verify_guard_feedback.py  verify_resolver_design.py  verify_robust.py  vite.config.ts
Constitution/: CONSTITUTION.md  etapes.md
agents/: subagent_ESMImportResolver.prompt  subagent_GraphicDesign.prompt  subagent_Speckit-TaskEnforcer.prompt  subagent_analysis.prompt  subagent_buildfix.prompt  subagent_impl.prompt  subagent_verify.prompt
backend/: jest.config.js  package-lock.json  package.json
backend/src/: app.ts
core/: GraphicDesign.py  __init__.py  cli.py  component_improver.py  constitution.py  constitution_generator.py  constitution_manager.py  design_system_generator.py  design_validator.py  etapes.py  graph.py  guard.py  pattern_engine.py  pattern_ranker.py  tasks.py  ui_ast.py  ux_flow_designer.py  validator.py  vision_pattern_detector.py
core/templates/: CONSTITUTION.template.md  ETAPES.template.md  MAPPING_COMPONENT.template.md  activation.md  app.ts  main.vite.react.template.tsx  next.config.template.ts  tsconfig.backend.json  tsconfig.frontend.nextjs.json  tsconfig.json
design/: constitution_design.yaml  tokens.yaml
design/dataset/: material_patterns.json  premium_patterns.json  pronanut_patterns.json  (+1 more)
frontend/: package.json
protocols/: constitution_rules.md  task_protocol.md  verification_rules.md
scratch/: find_non_ascii.py  non_ascii_results.txt  sanitize_graph.py
templates/: CONSTITUTION.template.md  ETAPES.template.md  activation.md
utils/: architecture_guard.py  diff_checker.py  esm_import_resolver.py  file_manager.py  scanner.py
(+20 files in other folders)
