[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speckit-factory"
version = "0.1.0"
description = "Constitutional DevOps AI Framework"
authors = [{name = "Didier KAZITALA"}]
dependencies = [
    "click>=8.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic<=1.3.4",
    "langchain-openai<=1.1.10",
]

[tool.setuptools]
packages = ["core", "utils", "agents", "protocols"]
py-modules = ["speckit_cli"]
include-package-data = true

[tool.setuptools.package-data]
agents = ["*.prompt"]
protocols = ["*.md"]
core = ["templates/**/*"]


[project.scripts]
speckit = "speckit_cli:cli"