[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speckit-factory"
version = "0.1.0"
description = "Constitutional DevOps AI Framework"
authors = [{name = "Didier KAZITALA"}]
dependencies = [
    "click>=8.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "langchain-google-genai>=2.0.0",
    "langchain-anthropic<=1.3.4",
    "langchain-openai<=1.1.10",
    "langgraph>=0.0.10",
    "langchain-core>=0.1.0",
]

[project.scripts]
speckit = "speckit_cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["core", "utils", "agents", "protocols"]

[tool.hatch.build.targets.sdist]
include = [
    "/core",
    "/utils",
    "/agents",
    "/protocols",
    "/speckit_cli.py",
    "/pyproject.toml",
]